fixing overflow

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ main section .projects .card__right a {
     padding: 0 1rem;
     width: 96%;
     height: auto;
-    overflow: auto;
+    overflow: hidden;
     font-size: 1rem;
     line-height: 1.2rem;
     vertical-align: baseline
